Fix some panel spacing

--- a/war/css/renderer/editor.css
+++ b/war/css/renderer/editor.css
@@ -41,3 +41,12 @@
 .editor .connection .gwt-TextBox {
     width:400px;
 }
+
+.editor .section-panel .header {
+	font-weight: bold;
+}
+
+.editor .document-description .gwt-TextArea {
+	width: 600px;
+    height: 50px;
+}
